Enable get guide me content
Endpoint to get guide me tasks
